package com.github.domain;
public class Wine {
    
}
