package com.github.ui.gui;
public class BattleView {
    
}